--- a/example.tex
+++ b/example.tex
@@ -1,5 +1,7 @@
 \section{Linked-List}
 
+\begin{algorithmic}
+\Procedure{\texttt{WRITE}(val)}{}
 \begin{algorithm}[H]
 	
 	\SetKwProg{Find}{Procedure find}{}{}
@@ -24,3 +26,6 @@
 
 	\caption{Harris Non-Blocking Algorithm}
 \end{algorithm}
+\EndProcedure
+\end{algorithmic}
+
