--- a/temp.tex
+++ b/temp.tex
@@ -15,7 +15,9 @@
 \begin{document}
 	
 	\begin{procedure}
-		sdffdsffs
+		dfgdg\;
+		sdffdsffs\;
+		
 		\caption{find (a)}
 	\end{procedure}
 
@@ -23,17 +25,19 @@
 	\If{a}{b}
 	\caption{find (a)}
 \end{function}
+
+\begin{algorithm}
+	sfdsf\;
+	sdfsfsdf\;
+	\caption{sdfs}
+\end{algorithm}
 	
+
 	\begin{algorithm}
-		\KwData{this text}
-		\KwResult{how to write algorithm with \LaTeX2e }
-		initialization\;
+	\KwData{this text}
+	\KwResult{how to write algorithm with \LaTeX2e }
+	initialization\;
 	
-	
-	\SetKwProg{myproc}{Procedure}{ find ()}{}
-	\myproc{\proc{}}{
-		
-		
 		\While{not at end of this document}{
 			read current\;
 			\eIf{understand}{
@@ -43,10 +47,11 @@
 				go back to the beginning of current section\;
 			}
 		}
-	}
-		\caption{How to write algorithms}
+
+			\caption{How to write algorithms}
 	
-	\end{algorithm}
+\end{algorithm}
+
 
 
 
