--- a/paper.tex
+++ b/paper.tex
@@ -4,7 +4,8 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsthm}
-\usepackage[linesnumbered]{algorithm2e}
+\usepackage{graphics}
+\usepackage[linesnumbered, ruled, noresetcount]{algorithm2e}
 \usepackage[noend]{algpseudocode}
 \usepackage{enumerate}
 \usepackage{paralist}
