--- a/temp.tex
+++ b/temp.tex
@@ -4,10 +4,11 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsthm}
+\usepackage{graphics}
 %\usepackage{algorithm}
 %\usepackage{algorithmic}
 \usepackage{algpseudocode}
-\usepackage[linesnumbered, ruled]{algorithm2e}
+\usepackage[linesnumbered, ruled, noresetcount]{algorithm2e}
 \usepackage{enumerate}
 \usepackage{paralist}
 \usepackage{fullpage}
@@ -51,6 +52,39 @@
 			\caption{How to write algorithms}
 	
 \end{algorithm}
+
+
+
+
+
+
+\begin{figure} \begin{center}
+
+	\begin{algorithm}[H]
+		\KwData{this text}
+		\KwResult{how to write algorithm with \LaTeX2e }
+		initialization\;
+	\end{algorithm}
+
+	\setcounter{AlgoLine}{0}
+
+	\begin{procedure}[H]
+		dfgdg\;
+		sdffdsffs\;
+		
+		\caption{find (a)}
+	\end{procedure}
+
+	\begin{procedure}[H]
+		dfgdg\;
+		sdffdsffs\;
+	
+		\caption{gets (a)}
+	\end{procedure}
+	
+	
+	\caption{test}
+\end{center} \end{figure}
 
 
 
