--- a/paper.tex
+++ b/paper.tex
@@ -5,7 +5,7 @@
 \usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{graphics}
-\usepackage[linesnumbered, ruled, noresetcount]{algorithm2e}
+\usepackage[linesnumbered, ruled, noresetcount, lined]{algorithm2e}
 \usepackage[noend]{algpseudocode}
 \usepackage{enumerate}
 \usepackage{paralist}
