--- a/example.tex
+++ b/example.tex
@@ -119,17 +119,15 @@ Following these linearization points (committing proof...), insert and delete op
 However, even though the List data structure is consistent, the response of the pending operation is lost. Consider for example a scenario in which process $p$ performs $Delete(\alpha)$ and crash at line \ref{harris-logical-delete} after performing a successful CAS. Upon recovery, $p$ may be able to decide $\alpha$ was removed, as the node is marked. Nevertheless, even if no other process takes steps, $p$ is not able to determine whether it is the process to successfully delete $\alpha$, or that it was done by some other process, and therefore it does not able to determine the right response. Moreover, in case the node was physically removed, $p$ is not able to determine whether $\alpha$ has been deleted, as it is no longer part of the list.
 
 
-\subsubsection{Harris Recoverable Version}
+\subsubsection{Linked-List Recoverable Version}
 
-To solve the problems mention above, we present a mechanise such that in case a process fails, upon recovery it is able to determine whether its last operation already took affect, and in such case to complete it and also return the right response. In case the operation did not took affect nor it will in any future run, $p$ is allowed to ignore the operation.
+To solve the problems mention above, we present a modification for the algorithm such that in case a process fails, upon recovery it is able to complete its last pending operation and also return the response value.
 
-Each node is equipped with a new field named owner. This field is used to determine which process is the one to delete the node. After a process $p$ successfully mark a node (logical delete), it tries to write its id to owner using CAS. This way
+Each node is equipped with a new field named owner. This field is used to determine which process is the one to delete the node. After a process $p$ successfully mark a node (logical delete), it tries to write its id to owner using CAS. This way, if a process fails during a delete, it can use owner in order to determine the response value. We assume owner is initialized to null when creating a new node.
 
+Each process $p$ has a designated location in the memory, Announce[p]. Before trying to apply an operation, $p$ writes to Announce[p] the entire data needed to complete the operation. Upon recovery, $p$ can read Announce[p], and based on it to complete its pending operation, in case there is such. Formally, Announce[p] contains a pointer to a structure containing all the relevant data.
 
-
-Each node is equipped with a new field, owner, which keeps the identity of the deleting process. When deleting a node, process $p$ first tries to set owner to $p$ using CAS, and only then tries to mark the node. Since the deletion process is split, an helping mechanism is needed. If a process does not win the race for owner, it still tries to mark the node, helping the owner to complete its operation.
-
-Process $p$ has a designated location in the memory, Announce[p]. Before trying to apply an operation, $p$ writes to Announce[p] the entire data needed to complete the operation. Upon recovery, $p$ can read Announce[p], and based on it to complete its pending operation, in case there is such. Formally, Announce[p] contains a pointer to a structure containing all the relevant data.
+We present the modified algorithm. Only the procedures which require changes are presented.
 
 
 \begin{figure}
@@ -137,8 +135,9 @@ Process $p$ has a designated location in the memory, Announce[p]. Before trying 
 	\textbf{Shared variables:} Node* head \\
 	
 	Define operation: struct \{ \nllabel{StructDefStart}
-	\emph{type}: OperationType, \emph{pred},\emph{curr}, \emph{new}: Node*, \emph{done}: bool \}
+	\emph{type}: OperationType, \emph{pred},\emph{curr}, \emph{new}: Node* \} \\
 	
+	Code for process p:\\
 	\begin{procedure}[H]
 		\caption{Insert (int key)}
 		
@@ -146,15 +145,15 @@ Process $p$ has a designated location in the memory, Announce[p]. Before trying 
 			$\qquad \quad$ Node node = \textbf{new} Node (key)\;
 		}
 		
-		\While{\True}{
+		\While{\True}{ \label{recover-insert}
 			$<$pred, curr$>$ = lookup(key)\;
 			\eIf{curr.key == key}{
 				\KwRet \False\;
 			}{
 				node.next = unmarked curr\;
-				Announce[p] = new operation (Insert, pred, curr, new, \False)\;
+				Announce[p] = new operation (Insert, pred, curr, new)\;
 				\If{pred.next.\CAS (unmarked curr, unmarked node)}{
-					Announce[p].done = \True\;
+				%	Announce[p].type = InsertDone\;
 					\KwRet \True\;
 				}
 			}		
@@ -168,34 +167,66 @@ Process $p$ has a designated location in the memory, Announce[p]. Before trying 
 		
 		\KwData{Node* pred, curr, succ}	
 		
-		\While{\True}{
+		\While{\True}{ \label{recover-delete}
 			$<$pred, curr$>$ = lookup(key)\;
 			\eIf{curr.key != key}{
 				\KwRet \False\;
 			}{
 				succ = curr.next\;
-				Announe[p] = new operation (Delete, pred, curr, null, \False)\;
-				\If{curr.next.\CAS (unmarked succ, marked succ)}{ \label{harris-logical-delete}
+				Announe[p] = new operation (Delete, pred, curr, null)\;
+				\If{curr.next.\CAS (unmarked succ, marked succ)}{ 
+					curr.owner.\CAS (null, p)\; \label{recoverable-logical-delete}
 					pred.next.\CAS (unmarked curr, unmarked succ)\;
-					\KwRet \True\;
+					\If{curr.owner == p}{
+						\KwRet \True\;
+					}
 				}
 			}	
 		}
 		
 	\end{procedure}
+
 	
-	\begin{procedure}[H]
-		\caption{Find (int key)}
-		
-		\KwData{Node* curr = head}	
-		
-		\While{curr.key $<$ key}{
-			curr = curr.next\;	
-		}
-		\KwRet (curr.key == key $\&\&$ curr.next is unmarked)\;
-		
-	\end{procedure}
-	
-	\caption{Harris Non-Blocking Algorithm}
-	\label{Harris original}
+	\caption{Recoverable Non-Blocking Linked-List}
+	\label{recoverable algorithm}
 \end{figure}
+
+
+
+\newpage
+
+\begin{procedure}[H]
+	\caption{Recover ()}
+	
+	\If{Announce[p].type = Insert}{
+		\eIf{Announce[p].new is in the list $||$ Announce[p].curr.next is marked}{
+			\KwRet \True\;
+		}{
+			\textbf{go to} \ref{recover-insert} \tcp*{restart Insert}\;
+		}	
+	}
+	\If{Announce[p].type == Delete}{
+		\eIf{Announce[p].curr.next is marked}{
+			\textbf{go to} \ref{recoverable-logical-delete} \tcp*{try to complete the deletation}\;
+		}{
+			\textbf{go to} \ref{recover-delete} \tcp*{restart Delete}\;
+		}
+	}
+	
+\end{procedure}
+
+\subsubsection*{Correctness Argument}
+In the following, we give an intuition for the correctness of the algorithm.
+
+For the Insert operation, $p$ tries to add the new node by performing a CAS. If it succeeded it will return true if there is no failure. In case of a failure after writing to Announce[p], upon recovery $p$ tries to complete its operation. If it already performed a successful CAS, that is, the node was added to the list, then either it is still in the list or that it was deleted. Therefore, if $p$ can find the new node in the list (using a similar procedure to find), or that it is marked, it must be that the node was added, and $p$ can return true. Otherwise, $p$ either crashed before performing the CAS, or that the CAS was unsuccessful. In both cases, the new node was not added, and $p$ can restart the Insert procedure.
+
+For the delete operation, once $p$ logically delete a node $v$, it also tries to announce itself as the "removal" of the node by writing its id to owner using CAS. Assume a process $p$ crash while trying to delete the node. Upon recovery, if $p$ sees the node is not marked, then obliviously its deletion did not took affect, and it can restart the delete operation. However, if the node is marked, it might be that $p$ marked it before the crash, and it might be some different process trying to deleting the same node did so. As $p$ can not distinguish between the two, and since we desire for a lock-free implementation, we let $p$ to try and complete this deletion, even if it is not to process to logically delete the node. To avoid a scenario in which more then a single process "delete" the same node, they all compete for owner using CAS. The first one to perform it will win, and it is the only process to return true. It is easy to verify once a process wins the owner field, then eventually, if given enough time with no crash, it returns true, while any other process trying to delete the same node will have to retry the delete operation.
+
+
+
+
+
+
+
+
+ 
